chore: update workflows and configuration files
- Added .vercel to .gitignore
- Updated package.json to include a new script for pulling environment variables from Vercel
- Replaced Corepack setup commands with pnpm/action-setup in lint and publish workflows
- Added steps to create and push a Git tag and create a GitHub release in the publish workflow

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clean": "rm -rf node_modules/.cache && rm -rf **/dist && rm -rf **/.tsbuildinfo",
     "dev:service": "pnpm --filter @impulselab/realtime-service dev",
     "dev:lib": "pnpm --filter @impulselab/realtime dev",
-    "dev:demo": "pnpm --filter demo dev"
+    "dev:demo": "pnpm --filter demo dev",
+    "env:pull": "vercel env pull demo/.env"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
