--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,11 +19,10 @@ jobs:
           node-version: "20"
           cache: "pnpm"
 
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Setup pnpm
-        run: corepack prepare pnpm@10.15.0 --activate
+      - name: Setup pnpm (action)
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.15.0
 
       - name: Install
         run: pnpm install --frozen-lockfile
