--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,11 +32,10 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           cache: "pnpm"
 
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Setup pnpm
-        run: corepack prepare pnpm@10.15.0 --activate
+      - name: Setup pnpm (action)
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.15.0
 
       - name: Install
         run: pnpm install --frozen-lockfile
@@ -97,6 +96,25 @@ jobs:
         run: |
           cd service
           pnpm publish --access public --no-git-checks
+
+      - name: Create and push Git tag
+        run: |
+          git tag v${{ steps.bump.outputs.service_version }}
+          git push origin v${{ steps.bump.outputs.service_version }}
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.bump.outputs.service_version }}
+          name: Release v${{ steps.bump.outputs.service_version }}
+          body: |
+            Release v${{ steps.bump.outputs.service_version }}
+            
+            **Package Versions:**
+            - @impulselab/realtime (lib): v${{ steps.bump.outputs.lib_version }}
+            - @impulselab/realtime-service (service): v${{ steps.bump.outputs.service_version }}
+          generate_release_notes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
