--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -95,15 +95,19 @@ jobs:
 
       - name: Publish @impulselab/realtime (lib)
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          npm config set //registry.npmjs.org/:_authToken "$NODE_AUTH_TOKEN"
+          npm config set @impulselab:registry https://registry.npmjs.org/
           cd lib
           pnpm publish --access public --no-git-checks
 
       - name: Publish @impulselab/realtime-service (service)
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          npm config set //registry.npmjs.org/:_authToken "$NODE_AUTH_TOKEN"
+          npm config set @impulselab:registry https://registry.npmjs.org/
           cd service
           pnpm publish --access public --no-git-checks
 
