--- a/demo/package.json
+++ b/demo/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@impulselab/realtime": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.13",
     "ioredis": "^5.7.0",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
