--- a/demo/package.json
+++ b/demo/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@impulselab/realtime": "workspace:*",
+    "@remixicon/react": "^4.6.0",
     "@tailwindcss/postcss": "^4.1.13",
     "ioredis": "^5.7.0",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.19",
     "next": "15.5.3",
     "postcss": "^8.5.6",
     "react": "19.1.0",
