chore: update build scripts in package.json files
- Replaced direct TypeScript compiler command with pnpm wrapper in service and lib package.json files for consistency
- Added a new prepare script for demo to build both the realtime and realtime-service packages

--- a/lib/package.json
+++ b/lib/package.json
@@ -15,7 +15,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc -p .",
+    "build": "pnpm --package=typescript dlx tsc -p .",
     "dev": "tsc -p . --watch",
     "typecheck": "tsc -p . --noEmit",
     "clean": "rm -rf dist .tsbuildinfo"
