--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "demo"
   ],
   "scripts": {
-    "build": "tsc -b",
     "typecheck": "tsc -p . --noEmit",
     "clean": "rm -rf node_modules/.cache && rm -rf **/dist && rm -rf **/.tsbuildinfo",
     "dev:service": "pnpm --filter @impulselab/realtime-service dev",
     "dev:lib": "pnpm --filter @impulselab/realtime dev",
     "dev:demo": "pnpm --filter demo dev",
+    "prepare:demo": "pnpm --filter @impulselab/realtime build && pnpm --filter @impulselab/realtime-service build",
     "env:pull": "vercel env pull demo/.env"
   },
   "devDependencies": {
