--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "ioredis": "^5.7.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.19",
-    "next": "15.5.3",
+    "next": "15.6.0-canary.27",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
